# sample-project-for-learn-20260619

./: README.md  architecture.md  plan.md  pyproject.toml  review.md
app/: __init__.py  main.py  routes.py  schemas.py  store.py
app/static/: app.js  index.html  styles.css
tests/: conftest.py  test_todos.py  test_ui.py
